--- a/build.settings
+++ b/build.settings
@@ -13,7 +13,7 @@ settings = {
 			'android.permission.WRITE_EXTERNAL_STORAGE',
 			'android.permission.RECEIVE_BOOT_COMPLETED',
 			'android.permission.VIBRATE',
-			'android.permission.READ_PHONE_STATE'
+			-- 'android.permission.READ_PHONE_STATE'
 		},
 
 		applicationChildElements = {
