--- a/build.settings
+++ b/build.settings
@@ -41,7 +41,9 @@ settings = {
 		['plugin.memoryBitmap'] = {publisherId = 'com.coronalabs'},
 		['plugin.zeroconf'] = {publisherId = 'com.coronalabs'},
 		['plugin.impack'] = {publisherId = 'com.xibalbastudios'},
-		['plugin.tinyfiledialogs'] = {publisherId = 'com.xibalbastudios'}
+		['plugin.tinyfiledialogs'] = {publisherId = 'com.xibalbastudios'},
+		['plugin.androidFilePicker'] = {publisherId = 'tech.scotth', marketplaceId = '2mfldi'},
+		['plugin.videoEditor'] = {publisherId = 'tech.scotth', marketplaceId = '2mfldi'}
 	},
 
 	excludeFiles = {
